--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,9 @@ hs_err_pid*
 
 # Virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 replay_pid*
+
+# Annoying file generated on windows?
+/.idea/runConfigurations.xml
+
+# Annyoing file generated on MacOS.
+**/.DS_Store
